// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <RecordsOfTablePopover /> should renders with props correctly when type diagnosis 1`] = `
<div
  className="record-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="record-popover-header"
  >
    <div
      className="record-popover-title"
    >
      Diagnosis
    </div>
  </div>
  <div
    className="record-popover-body"
  >
    <div
      className="record-popover-content"
    >
      <Spinner />
      <RecordsOfTablePopoverDiagnosis
        detail={
          Object {
            "author": "Dr Tony Shannon",
            "code": 12393890,
            "dateCreated": 1516801743000,
            "dateOfOnset": 1514851200000,
            "description": "ggg",
            "originalComposition": "",
            "originalSource": "",
            "problem": "# CONDYLE RIGHT HUMERUS 123",
            "source": "ethercis",
            "sourceId": "a360e5fa-c837-4060-9f67-fecbf2f42d42",
            "terminology": "SNOMED-CT",
          }
        }
      />
      <RecordsOfTablePlugins
        detail={
          Object {
            "author": "Dr Tony Shannon",
            "code": 12393890,
            "dateCreated": 1516801743000,
            "dateOfOnset": 1514851200000,
            "description": "ggg",
            "originalComposition": "",
            "originalSource": "",
            "problem": "# CONDYLE RIGHT HUMERUS 123",
            "source": "ethercis",
            "sourceId": "a360e5fa-c837-4060-9f67-fecbf2f42d42",
            "terminology": "SNOMED-CT",
          }
        }
        typeOfRecord="diagnosis"
      />
    </div>
  </div>
</div>
`;

exports[`Component <RecordsOfTablePopover /> should renders with props correctly when type medications 1`] = `
<div
  className="record-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="record-popover-header"
  >
    <div
      className="record-popover-title"
    >
      Medications
    </div>
  </div>
  <div
    className="record-popover-body"
  >
    <div
      className="record-popover-content"
    >
      <Spinner />
      <RecordsOfTablePopoverMedications
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1515670672000,
            "doseAmount": "Dose Amount",
            "doseDirections": "Dose Direction",
            "doseTiming": "Dose Amount",
            "medicationCode": 123456789,
            "medicationTerminology": "external",
            "name": "test medication 11.01",
            "route": "Po Per Oral",
            "source": "ethercis",
            "sourceId": "1893365f-4961-4af1-847c-8ccf205aa7a1",
            "startDate": 1515719699000,
            "startTime": 4499000,
          }
        }
      />
      <RecordsOfTablePlugins
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1515670672000,
            "doseAmount": "Dose Amount",
            "doseDirections": "Dose Direction",
            "doseTiming": "Dose Amount",
            "medicationCode": 123456789,
            "medicationTerminology": "external",
            "name": "test medication 11.01",
            "route": "Po Per Oral",
            "source": "ethercis",
            "sourceId": "1893365f-4961-4af1-847c-8ccf205aa7a1",
            "startDate": 1515719699000,
            "startTime": 4499000,
          }
        }
        typeOfRecord="medications"
      />
    </div>
  </div>
</div>
`;

exports[`Component <RecordsOfTablePopover /> should renders with props correctly without Spinner 1`] = `
<div
  className="record-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="record-popover-header"
  >
    <div
      className="record-popover-title"
    />
  </div>
  <div
    className="record-popover-body"
  >
    <div
      className="record-popover-content"
    >
      <Spinner />
      <RecordsOfTablePlugins
        detail={null}
        typeOfRecord="test"
      />
    </div>
  </div>
</div>
`;

exports[`Component <RecordsOfTablePopover /> should renders with props correctly without Spinner 2`] = `
<div
  className="record-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="record-popover-header"
  >
    <div
      className="record-popover-title"
    >
      Medications
    </div>
  </div>
  <div
    className="record-popover-body"
  >
    <div
      className="record-popover-content"
    >
      <Spinner />
      <RecordsOfTablePopoverMedications
        detail={null}
      />
      <RecordsOfTablePlugins
        detail={null}
        typeOfRecord="medications"
      />
    </div>
  </div>
</div>
`;
